tests/semantic/expression_err2.expected

Semantic Error [line 5]: value: "literal0"
	Unexpected l-value type: 
Expected type(s) 'Integer' or 'Boolean'; found 'String' instead.
