tests/semantic/expression_err2.mtp
(*Testing simple expressions with constant literal*)
var a,b : integer;

begin
	a := (a = b) > ('error' <= (b <> a)) 
end.